--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -172,7 +172,7 @@
     "translation": "Impossible de créer plus de {{.MaxChannelsPerTeam}} canaux pour l'équipe actuelle"
   },
   {
-    "id": "api.channel.create_default_channels.off_topic",
+    "id": "api.channel.create_default_channels.all-people",
     "translation": "Hors-sujet"
   },
   {
