--- a/i18n/pl.json
+++ b/i18n/pl.json
@@ -172,7 +172,7 @@
     "translation": "Nie można utworzyć więcej niż {{.MaxChannelsPerTeam}} kanałów dla obecnego zespołu"
   },
   {
-    "id": "api.channel.create_default_channels.off_topic",
+    "id": "api.channel.create_default_channels.all-people",
     "translation": "Pogawędki"
   },
   {
