--- a/i18n/zh-CN.json
+++ b/i18n/zh-CN.json
@@ -172,7 +172,7 @@
     "translation": "当前团队无法创建超过 {{.MaxChannelsPerTeam}} 个频道"
   },
   {
-    "id": "api.channel.create_default_channels.off_topic",
+    "id": "api.channel.create_default_channels.all-people",
     "translation": "闲聊"
   },
   {
