--- a/i18n/es.json
+++ b/i18n/es.json
@@ -172,7 +172,7 @@
     "translation": "No se puede crear más de {{.MaxChannelsPerTeam}} canales para el equipo actual"
   },
   {
-    "id": "api.channel.create_default_channels.off_topic",
+    "id": "api.channel.create_default_channels.all-people",
     "translation": "Fuera de Tópico"
   },
   {
