--- a/i18n/it.json
+++ b/i18n/it.json
@@ -172,7 +172,7 @@
     "translation": "Impossibile creare più di {{.MaxChannelsPerTeam}} canali per il gruppo corrente"
   },
   {
-    "id": "api.channel.create_default_channels.off_topic",
+    "id": "api.channel.create_default_channels.all-people",
     "translation": "Senza-Argomento"
   },
   {
