--- a/i18n/ja.json
+++ b/i18n/ja.json
@@ -172,7 +172,7 @@
     "translation": "現在のチームには、{{.MaxChannelsPerTeam}}チャンネル以上作成できません"
   },
   {
-    "id": "api.channel.create_default_channels.off_topic",
+    "id": "api.channel.create_default_channels.all-people",
     "translation": "オフトピック"
   },
   {
