--- a/i18n/nl.json
+++ b/i18n/nl.json
@@ -172,7 +172,7 @@
     "translation": "Kan niet meer dan {{.MaxChannelsPerTeam}} kanalen aanmaken voor het huidige team"
   },
   {
-    "id": "api.channel.create_default_channels.off_topic",
+    "id": "api.channel.create_default_channels.all-people",
     "translation": "Allerlei"
   },
   {
