--- a/i18n/pt-BR.json
+++ b/i18n/pt-BR.json
@@ -172,12 +172,12 @@
     "translation": "Não é possível criar mais de {{.MaxChannelsPerTeam}} canais para a equipe atual"
   },
   {
-    "id": "api.channel.create_default_channels.off_topic",
-    "translation": "Off-Topic"
+    "id": "api.channel.create_default_channels.all-people",
+    "translation": "所有人"
   },
   {
     "id": "api.channel.create_default_channels.town_square",
-    "translation": "Town Square"
+    "translation": "SellerOS小助手"
   },
   {
     "id": "api.channel.create_direct_channel.invalid_user.app_error",
