--- a/i18n/tr.json
+++ b/i18n/tr.json
@@ -172,7 +172,7 @@
     "translation": "Geçerli takıma en fazla {{.MaxChannelsPerTeam}} kanal eklenebilir"
   },
   {
-    "id": "api.channel.create_default_channels.off_topic",
+    "id": "api.channel.create_default_channels.all-people",
     "translation": "İlgisiz"
   },
   {
